fix: windows fancy scrollbars background fix: newly appeared DM stuck when using DM filter fix: crash on Windows when unfocusing profile

--- a/src/components/DMPanel/DMPanel.scss
+++ b/src/components/DMPanel/DMPanel.scss
@@ -21,20 +21,3 @@
     text-transform: uppercase;
   }
 }
-QScrollBar {
-  height: 8px;
-  width: 8px;
-  background-color: transparent;
-  border: 2px solid $background-secondary;
-  border-radius: 4px;
-  &::handle {
-    background-color: $scrollbar-thin-thumb;
-    border-radius: 4px;
-  }
-  &::add-line {
-    height: 0px;
-  }
-  &::sub-line {
-    height: 0px;
-  }
-}
